--- a/demo-app/manifest.json
+++ b/demo-app/manifest.json
@@ -2,13 +2,13 @@
 	"manifest_version":1,
 	"type":"WebApp",
 	"meta":{
-		"name":"Demo App",
+		"name":"Experiment One",
 		"version":"0.0.1",
 		"minimum-overwolf-version":"0.77.10",
-		"author":"Overwolf Team, Tyson Taylor",
+		"author":"Tyson Taylor",
 		"icon":"IconMouseOver.png",
 		"icon_gray":"IconMouseNormal.png",
-		"description":"Demo App"
+		"description":"My first experimental exporation of the Overwolf api"
 	},
 	"data": {
 		"start_window":"MainWindow",
